# packgen

./: .gitignore  README.md  packing_parameters.json  packing_parameters_5.json  parameters.json  pyproject.toml
examples/: parameters.json  parameters_5.json
src/packgen/: __init__.py  blend.py  config_example.json  print_summary.py
test/: test_number_ratio.py  test_volumes.py
