[project]
name = "packgen"
version = "0.3.0"
description = "Particle packing generator"
readme = "README.md"
authors = [
    { name = "Fábio P. Fortkamp", email = "fabio@fabiofortkamp.com" },
    { name = "Andrea R. Insinga", email = "aroin@dtu.dk" },
    { name = "Andreas Papanikolaou", email = "" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "bpy>=4.4.0",
    "numpy>=2.2.3",
    "rich>=13.9.4",
]

[project.scripts]
packgen = "packgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.basedpyright]
typeCheckingMode = "basic"
allowedUntypedLibraries = ["bpy"]

